[Spring 경로 조회 - 1단계] 제로(공재호) 미션 제출합니다. (#206)
* feat: 기존 지하철 코드 업데이트

* docs: 1단계 기능 요구사항 작성

* feat: 경로 도메인 생성

* feat: 요금 도메인 생성

* feat: 경로 서비스 클래스 로직 구현

* feat: 모든 구간 찾아오는 쿼리 생성

* feat: 경로 검색 API 컨트롤러 로직 생성

* docs: 1단계 기능 요구사항 업데이트

* test: 경로 서비스 테스트 케이스 추가

* refactor: 3개로 받던 Request Paremeter 를 하나의 dto 객체로 받게 수정

* feat: 경로 검색에 대한 인수 테스트 케이스 추가

* refactor: 전역적 예외 처리 수정

* refactor: 사용하지 않는 임포트 삭제

Co-authored-by: leokim <kunga077@gmail.com>